# serpent-ai

./: .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.production  LICENSE  README.md  _build_mobile.py  _fix_imports.py  _get_ci_detail.py  _get_ci_logs.py  _scan_risky.py  _scan_test_chain.py  check_stubs.py  conftest.py  debug_find.py  demo_system_tools.py  docker-compose.prod.yml  docker-compose.yml  fix-summary-2014.md  fix_quotes.py  frontend-improvement-summary.md  pytest.ini  requirements-optional.txt  requirements.txt  serpent-ai-rust-celery-impl-20260530.md  serpent-ai-tool-integration-2026-05-16.md  setup.py  start_server.py  task-summary_2026-05-24_0808.md  test_system_tools.py
.github/workflows/: tests.yml
backend/: .env.example  main.py  requirements.txt
backend/agent/: __init__.py  agent.py  multi_agent.py  reasoning_engine.py  self_evolution.py  task_scheduler.py  tool_coordinator.py
backend/core/: cache.py  (+10 more)
config/: nginx.conf
desktop-client/: README.md
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/src/: main.rs
docs/: DEPLOYMENT.md  MODEL_CONFIG.md
examples/: agent_example.py  local_model_example.py  quickstart.py  workflow_example.py
frontend/: README.md  app.js
k8s/: deployment.yaml
memory/: 2026-05-30.md
mobile/: README.md  index.html  manifest.json  sw.js
rust_core/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
rust_core/src/: crypto_module.rs  error.rs  lib.rs  memory_index.rs  token_optimizer.rs  tool_sandbox.rs
scripts/: setup_neo4j.py
sdk/: README.md  __init__.py  agent.py  client.py  exceptions.py  memory.py  plugin.py  skill.py  types.py  voice.py  workflow.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_agent_extended.py  test_anthropic_adapter_coverage.py  test_api.py  test_core.py  test_efficiency.py  test_gateways.py  test_knowledge_graph.py  test_llama_coverage.py  test_memory.py  test_message_queue.py  test_models.py  test_models_coverage.py  test_models_extended.py  test_models_full.py  test_offline_manager.py  test_openai_adapter_coverage.py  test_plugin_store.py  test_registry_coverage.py  test_routes_full.py  test_rust_bridge.py  test_security.py  test_skills.py  test_tools.py  test_tools_full.py  test_voice_full.py  test_voice_stt_simple.py  test_voice_tts_simple.py  test_workflow_full.py
(+161 files in other folders)
